--- a/package.json
+++ b/package.json
@@ -9,20 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@davidgovea/react-native-wheel-datepicker": "^1.0.2",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-native-vector-icons/fontawesome": "^4.7.0-alpha.34",
-    "expo": "~51.0.28",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/stack": "^7.0.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "expo": "51.0.39",
+    "expo-blur": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-date-picker": "^5.0.7",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "^4.0.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-wheel-datepicker": "^2.2.3",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
   },
   "private": true
